Fix "tooltip" always visible on edit user form
Broken by incomplete fix cf9c172
Fixes #81

--- a/app/assets/stylesheets/common2.css.scss
+++ b/app/assets/stylesheets/common2.css.scss
@@ -292,6 +292,7 @@ input:-moz-placeholder {font-style: italic;}
     top: 10px;
     width: 15em;
     border: 1px solid black;
+    padding: 2px;
     background: #f5f4d6;
     margin-left: -9999px;
   }
